# ray-milvus

./: .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-wheels.yml  ci.yml  release.yml
examples/: basic_example.py
milvus_ray/: datasink.py  datasource.py
ray_milvus/: __init__.py  datasink.py  datasource.py  similarity.py
tests/: __init__.py  test_integration.py
