[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ray-milvus"
version = "0.1.0"
description = "Ray Data datasource and datasink for Milvus Storage"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Zilliz", email = "support@zilliz.com"}
]
keywords = ["ray", "milvus", "vector-database", "data-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "ray[data]>=2.51.1",
    "pyarrow>=21.0.0",
    "numpy>=1.24.0",
    "cffi>=1.15.0",
    "milvus-storage @ https://github.com/santiago-wjq/milvus-storage/releases/download/v0.1.7/milvus_storage-0.1.7-py3-none-manylinux_2_35_x86_64.whl",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/zilliztech/ray-milvus"
Documentation = "https://github.com/zilliztech/ray-milvus#readme"
Repository = "https://github.com/zilliztech/ray-milvus.git"
Issues = "https://github.com/zilliztech/ray-milvus/issues"

[tool.setuptools.packages.find]
include = ["ray_milvus*"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-*"
skip = "*-musllinux*"
test-requires = ["pytest", "pyarrow", "numpy"]
test-command = "python -c \"from ray_milvus import MilvusDatasource; print('OK')\""
